sandbox/output
StringCalculator.java:9: error: ';' expected
        retrun addArray(purky(numbers));
                       ^
StringCalculator.java:9: error: ';' expected
        retrun addArray(purky(numbers));
                                      ^
2 errors
